--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -15,6 +15,21 @@
 		  	   <div class="layui-tab-item layui-show">
 		  	   	   <form action="{url./admin/Config/index}" method="post" class="layui-form">
 			  	   	   <input type="hidden" name="formcheck" value="{$formcheck}" > 
+			  	   	   
+			  	   	    <div class="layui-form-item">
+		                     <label class="layui-form-label">网站状态</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="close_site" value="1" {if([$configs.close_site.value]==1)} checked="checked" {/if} title="关闭">
+								<input type="radio" name="close_site" value="0" {if([$configs.close_site.value]==0)} checked="checked" {/if} title="开启">
+		                     </div>
+		                </div>
+		                
+			  	   	     <div class="layui-form-item">
+		                     <label class="layui-form-label">关站提示</label>
+		                     <div class="layui-input-inline">
+		                     	<textarea name="close_site_note" placeholder="" class="layui-textarea">{$configs.close_site_note.value}</textarea>
+		                     </div> 
+		                </div>
 		                
 		  	   		 	<div class="layui-form-item">
 		                     <label class="layui-form-label">独立手机版</label>
@@ -33,7 +48,7 @@
 		                </div>
 
 		                <div class="layui-form-item">
-		                     <label class="layui-form-label">前端静态缓存</label>
+		                     <label class="layui-form-label">动态缓存</label>
 		                     <div class="layui-input-block">
 		                     	<input type="radio" name="tpl_html_cache" value="1" {if([$configs.tpl_html_cache.value]==1)} checked="checked" {/if} title="启用">
 								<input type="radio" name="tpl_html_cache" value="0" {if([$configs.tpl_html_cache.value]==0)} checked="checked" {/if} title="禁用">
@@ -62,6 +77,7 @@
 		                     <div class="layui-input-block">
 		                     	<input type="radio" name="session_in_sitepath" value="1" {if([$configs.session_in_sitepath.value]==1)} checked="checked" {/if} title="站内">
 								<input type="radio" name="session_in_sitepath" value="0" {if([$configs.session_in_sitepath.value]==0)} checked="checked" {/if} title="系统">
+								<span class="layui-icon layui-icon-about tips" data-content="站内则使用站点下runtime路径，系统则使用操作系统的缓存路径！"></span>
 		                     </div>
 		                </div>
 		                
@@ -82,10 +98,10 @@
 		                </div>
 		                
 		                <div class="layui-form-item">
-		                     <label class="layui-form-label">关键词过滤</label>
+		                     <label class="layui-form-label">敏感词过滤</label>
 		                     <div class="layui-input-inline">
 		                     	<textarea name="content_keyword_replace" placeholder="请输入需要过滤的关键词，多个之间逗号隔开" class="layui-textarea">{$configs.content_keyword_replace.value}</textarea>
-		                     	<div class="layui-form-mid layui-word-aux">注：多个关键词之间用逗号隔开！</div>
+		                     	<div class="layui-form-mid layui-word-aux">注：多个敏感词之间用逗号隔开！</div>
 		                     </div>
 		                     
 		                </div>
@@ -193,7 +209,7 @@
 		                <div class="layui-form-item">
 		                     <label class="layui-form-label">信息接收邮箱</label>
 		                     <div class="layui-input-inline">
-		                     	<input type="text" name="message_send_to"  value="{$configs.message_send_to.value}" placeholder="请输入留言接收邮箱"  class="layui-input">
+		                     	<input type="text" name="message_send_to"  value="{$configs.message_send_to.value}" placeholder="请输入信息接收邮箱"  class="layui-input">
 		                     </div>
 		                </div>
 		                
@@ -380,8 +396,8 @@
 		                <div class="layui-form-item">
 		                     <label class="layui-form-label">后台验证码</label>
 		                     <div class="layui-input-block">
-		                     	<input type="radio" name="admin_check_code" value="1" {if([$configs.admin_check_code.value]==1)} checked="checked" {/if} title="启用">
-								<input type="radio" name="admin_check_code" value="0" {if([$configs.admin_check_code.value]==0)} checked="checked" {/if} title="禁用">
+		                     	<input type="radio" name="admin_check_code" value="1" {if([$configs.admin_check_code.value]=='1'||[$configs.admin_check_code.value]=='')} checked="checked" {/if} title="启用">
+								<input type="radio" name="admin_check_code" value="0" {if([$configs.admin_check_code.value]=='0')} checked="checked" {/if} title="禁用">
 		                     </div>
 		                </div>
 		                
@@ -394,26 +410,10 @@
 		                </div>
 		                
 		                <div class="layui-form-item">
-		                     <label class="layui-form-label">表单功能</label>
-		                     <div class="layui-input-block">
-		                     	<input type="radio" name="form_status" value="1" {if([$configs.form_status.value]=='1'||[$configs.form_status.value]=='')} checked="checked" {/if} title="启用">
-								<input type="radio" name="form_status" value="0" {if([$configs.form_status.value]=='0')} checked="checked" {/if} title="禁用">
-		                     </div>
-		                </div>
-		                
-		                <div class="layui-form-item">
 		                     <label class="layui-form-label">留言验证码</label>
 		                     <div class="layui-input-block">
-		                     	<input type="radio" name="message_check_code" value="1" {if([$configs.message_check_code.value]==1)} checked="checked" {/if} title="启用">
-								<input type="radio" name="message_check_code" value="0" {if([$configs.message_check_code.value]==0)} checked="checked" {/if} title="禁用">
-		                     </div>
-		                </div>
-
-		                <div class="layui-form-item">
-		                     <label class="layui-form-label">表单验证码</label>
-		                     <div class="layui-input-block">
-		                     	<input type="radio" name="form_check_code" value="1" {if([$configs.form_check_code.value]==1)} checked="checked" {/if} title="启用">
-								<input type="radio" name="form_check_code" value="0" {if([$configs.form_check_code.value]==0)} checked="checked" {/if} title="禁用">
+		                     	<input type="radio" name="message_check_code" value="1" {if([$configs.message_check_code.value]=='1'||[$configs.message_check_code.value]=='')} checked="checked" {/if} title="启用">
+								<input type="radio" name="message_check_code" value="0" {if([$configs.message_check_code.value]=='0')} checked="checked" {/if} title="禁用">
 		                     </div>
 		                </div>
 		                
@@ -422,6 +422,22 @@
 		                     <div class="layui-input-block">
 		                     	<input type="radio" name="message_verify" value="1" {if([$configs.message_verify.value]=='1'||[$configs.message_verify.value]=='')} checked="checked" {/if} title="启用">
 								<input type="radio" name="message_verify" value="0" {if([$configs.message_verify.value]=='0')} checked="checked" {/if} title="禁用">
+		                     </div>
+		                </div>
+		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">表单功能</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="form_status" value="1" {if([$configs.form_status.value]=='1'||[$configs.form_status.value]=='')} checked="checked" {/if} title="启用">
+								<input type="radio" name="form_status" value="0" {if([$configs.form_status.value]=='0')} checked="checked" {/if} title="禁用">
+		                     </div>
+		                </div>
+		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">表单验证码</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="form_check_code" value="1" {if([$configs.form_check_code.value]=='1'||[$configs.form_check_code.value]=='')} checked="checked" {/if} title="启用">
+								<input type="radio" name="form_check_code" value="0" {if([$configs.form_check_code.value]=='0')} checked="checked" {/if} title="禁用">
 		                     </div>
 		                </div>
 		                
@@ -440,6 +456,22 @@
 		                   </div>
 		                   <div class="layui-form-mid layui-word-aux">秒</div>
 			            </div>
+			            
+			           <div class="layui-form-item">
+		                     <label class="layui-form-label">IP黑名单</label>
+		                     <div class="layui-input-inline">
+		                     	<textarea name="ip_deny" placeholder="请输入需要禁止访问的IP，多个之间逗号隔开，IP地址支持使用/掩码位数模式，如：192.168.1.0/24, 192.168.2.100" class="layui-textarea">{$configs.ip_deny.value}</textarea>
+		                     </div> 
+		                     <span class="layui-icon layui-icon-about tips" data-content="请输入需要禁止访问的IP，多个之间逗号隔开，IP地址支持使用/掩码位数模式，如：192.168.1.0/24, 192.168.2.100"></span>
+		                </div>
+		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">IP白名单</label>
+		                     <div class="layui-input-inline">
+		                     	<textarea name="ip_allow" placeholder="请输入需要允许访问的IP，多个之间逗号隔开，IP地址支持使用/掩码位数模式，如：192.168.1.0/24, 192.168.2.100" class="layui-textarea">{$configs.ip_allow.value}</textarea>
+		                     </div> 
+		                      <span class="layui-icon layui-icon-about tips" data-content="请输入需要允许访问的IP，多个之间逗号隔开，IP地址支持使用/掩码位数模式，如：192.168.1.0/24,192.168.2.100"></span>
+		                </div>
 		                
 		                <div class="layui-form-item">
 							 <div class="layui-input-block">
@@ -458,15 +490,15 @@
 		                     <label class="layui-form-label">地址模式</label>
 		                     <div class="layui-input-block">
 		                     	<P>
-		                     		<input type="radio" name="url_rule_type" value="1" {if([$configs.url_rule_type.value]==1)} checked="checked" {/if} title="普通模式，格式：/index.php/product/1.html">
+		                     		<input type="radio" name="url_rule_type" value="1" {if([$configs.url_rule_type.value]==1)} checked="checked" {/if} title="普通模式，类似：/index.php/product/1.html">
 		                     		<span class="layui-icon layui-icon-about tips" data-content="基本模式需要服务器支持pathinfo,特别是nginx下pathinfo要手动配置！"></span>
 		                     	</P>
 		                     	<P>
-		                     		<input type="radio" name="url_rule_type" value="2" {if([$configs.url_rule_type.value]==2)} checked="checked" {/if} title="伪静态模式，格式：/product/1.html">
+		                     		<input type="radio" name="url_rule_type" value="2" {if([$configs.url_rule_type.value]==2)} checked="checked" {/if} title="伪静态模式，类似：/product/1.html">
 		                     		<span class="layui-icon layui-icon-about tips" data-content="伪静态时需要服务器环境的支持，并需要添加伪静态规则！"></span>
 								</P>
 		                     	<P>
-									<input type="radio" name="url_rule_type" value="3" {if([$configs.url_rule_type.value]==3||![$configs.url_rule_type.value])} checked="checked" {/if} title="兼容模式，格式：/?product/1.html">
+									<input type="radio" name="url_rule_type" value="3" {if([$configs.url_rule_type.value]==3||![$configs.url_rule_type.value])} checked="checked" {/if} title="兼容模式，类似：/?product/1.html">
 								</P>
 		                     </div>
 		                </div>
