--- a/apps/admin/view/default/system/syslog.html
+++ b/apps/admin/view/default/system/syslog.html
@@ -33,8 +33,8 @@
 	                    {/foreach}
 	                </tbody>
 	            </table>
-	            {if(session('id')==1 && [$syslogs])}
-	            	<a href="{url./admin/Syslog/clear}" class="layui-btn">清空日志</a>
+	            {if(session('ucode')==10001 && [$syslogs])}
+	            	<a href="{url./admin/Syslog/clear}" class="layui-btn layui-btn-sm"  onclick='return confirm("您确定要清空么？")'>清空日志</a>
 	            {/if}
 	            <div class="page">{$pagebar}</div>
 	  	   </div>
