--- a/apps/admin/view/default/content/form.html
+++ b/apps/admin/view/default/content/form.html
@@ -115,8 +115,10 @@
 			     	<a href="{url./admin/Form/clear/fcode/'.[$form->fcode].'}"  onclick='return confirm("您确定要清空么？")' class="layui-btn layui-btn-sm">清空记录</a>
 			    {/if}
 			    
-			    <a href="{url./admin/Form/index/fcode/'.[$form->fcode].'/action/showdata/export/1}" class="layui-btn layui-btn-sm">导出记录</a>
-			     
+			    {if([$formdata])}
+			    	<a href="{url./admin/Form/index/fcode/'.[$form->fcode].'/action/showdata/export/1}" class="layui-btn layui-btn-sm">导出记录</a>
+			    {/if}
+			    
 	            <div class="page">{$pagebar}</div>
 	  	   </div>
 	  	 </div>
