--- a/apps/admin/view/default/common/foot.html
+++ b/apps/admin/view/default/common/foot.html
@@ -1,6 +1,6 @@
   <div class="layui-footer">
     <!-- 底部固定区域 -->
-    &copy; <a href="http://www.pbootcms.com" target="_blank">2018-2019 PbootCMS版权所有.</a>
+    &copy; <a href="http://www.pbootcms.com" target="_blank">2018-{fun=date('Y')} PbootCMS版权所有.</a>
   	<span class="layui-hide-xs">{pboot:runtime}</span>
   </div>
 </div>
