--- a/apps/admin/view/default/index.html
+++ b/apps/admin/view/default/index.html
@@ -59,7 +59,7 @@
 	</div>
 	
 	<div class="layui-trans user-login-footer">
-		<p>© 2018 <a href="http://www.pbootcms.com/" target="_blank">pbootcms.com</a></p>
+		<p>© 2018-{fun=date('Y')} <a href="http://www.pbootcms.com/" target="_blank">pbootcms.com</a></p>
 		<p><span><a href="http://demo.pbootcms.com" target="_blank">在线演示</a></span><span><a href="http://www.pbootcms.com" target="_blank">前往官网</a></span> </p>
 	</div>
 	
