--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -106,7 +106,7 @@
 		                     
 		                </div>
 		                
-		                {if(LICENSE!=3)}
+		                {if(LICENSE<2)}
 		                
 		                <div class="layui-form-item">
 		                     <label class="layui-form-label">系统授权码</label>
