--- a/apps/admin/view/default/content/content.html
+++ b/apps/admin/view/default/content/content.html
@@ -164,10 +164,10 @@
 				     	{if(check_level('mod'))}
 				     		<button type="submit" name="submit" value="sorting" class="layui-btn layui-btn-sm">保存排序</button>
 					     	{if([$baidu_zz_token])}
-					     		<button type="submit" name="submit" value="baiduzz" class="layui-btn layui-btn-sm">百度推送</button>
+					     		<button type="submit" name="submit" value="baiduzz" class="layui-btn layui-btn-sm">百度普通推送</button>
 					     	{/if}
-					     	{if([$baidu_xzh_appid])}
-					     		<button type="submit" name="submit" value="baiduxzh" class="layui-btn layui-btn-sm">熊掌号推送</button>
+					     	{if([$baidu_ks_token])}
+					     		<button type="submit" name="submit" value="baiduks" class="layui-btn layui-btn-sm">百度快速推送</button>
 					     	{/if}
 				     	 {/if}
 			     	 </div>
