--- a/apps/admin/view/default/content/single.html
+++ b/apps/admin/view/default/content/single.html
@@ -83,10 +83,10 @@
 	                            {if(check_level('mod'))}
 	                            	<a href="{url./admin/Single/mod/mcode/'.$value->mcode.'/id/'.$value->id.'}{$btnqs}" class="layui-btn layui-btn-xs" >修改</a>
 	                            	{if([$baidu_zz_token] && !$value->outlink)}
-	                            		<a href="{url./admin/'.C.'/mod/baiduzz/'.$value->id.'}" class="layui-btn layui-btn-xs layui-btn-primary" >百度推送</a>
+	                            		<a href="{url./admin/'.C.'/mod/baiduzz/'.$value->id.'}" class="layui-btn layui-btn-xs layui-btn-primary" >百度普通推送</a>
 	                            	{/if}
-	                            	{if([$baidu_xzh_appid] && !$value->outlink)}
-	                            		<a href="{url./admin/'.C.'/mod/baiduxzh/'.$value->id.'}" class="layui-btn layui-btn-xs layui-btn-primary" >熊掌号推送</a>
+	                            	{if([$baidu_ks_token] && !$value->outlink)}
+	                            		<a href="{url./admin/'.C.'/mod/baiduks/'.$value->id.'}" class="layui-btn layui-btn-xs layui-btn-primary" >百度快速推送</a>
 	                            	{/if}
 	                            {/if}
 	                        </td>
