--- a/template/default/html/message.html
+++ b/template/default/html/message.html
@@ -22,7 +22,7 @@
 	    	<span class="badge badge-light text-secondary font-weight-normal">[message:askdate]</span>
 	    </p>
 	    
-	    {pboot:if([message:recontent]!='')}
+	    {pboot:if('[message:recontent]'!='')}
 	    <div class="media mt-3 border-top-dashed pt-3">
 	      <img class="mr-3" src="{pboot:sitetplpath}/images/user.png" height="25">
 	      <div class="media-body">
