--- a/apps/admin/view/default/content/content.html
+++ b/apps/admin/view/default/content/content.html
@@ -349,7 +349,7 @@
 			                <div class="layui-form-item">
 			                     <label class="layui-form-label">作者</label>
 			                     <div class="layui-input-block">
-			                     	<input type="text" name="author" placeholder="请输入作者" value="{$session.username}" class="layui-input">
+			                     	<input type="text" name="author" placeholder="请输入作者" value="{$session.realname}" class="layui-input">
 			                     </div>
 			                </div>
 			                
